BREAKING CHANGE: finished compiler