@@ -1,34 +1,35 @@
-package modules;
+package AST;
 
-import AST.FunctionDeclaration;
-import util.ReturnException;
+import modules.Expression;
 
-import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
-public class FunctionCall implements Statement{
+public class FunctionCallExpression implements Expression {
     private final String functionName;
     private final List<Expression> arguments;
 
-    public FunctionCall(String functionName, List<Expression> arguments) {
+    public FunctionCallExpression(String functionName, List<Expression> arguments) {
         this.functionName = functionName;
         this.arguments = arguments;
     }
 
     @Override
-    public void execute(Map<String, Object> symbolTable) {
+    public Object evaluate(Map<String, Object> symbolTable) {
         Object functionObject = symbolTable.get(functionName);
         if (!(functionObject instanceof FunctionDeclaration function)) {
             throw new RuntimeException("Undefined function: " + functionName);
         }
 
+        // Evaluate all the arguments.
         List<Object> evaluatedArgs = arguments.stream()
                 .map(arg -> arg.evaluate(symbolTable))
-                .toList();
+                .collect(Collectors.toList());
 
-        function.invoke(symbolTable, evaluatedArgs);
+        // Return the result of the function invocation.
+        return function.invoke(symbolTable, evaluatedArgs);
     }
-}
 
+
+}
